--- a/SortingAlgorithms/index.html
+++ b/SortingAlgorithms/index.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	</head>
+	
 	<header>
 		The Array to be Sorted
 	</header>
@@ -19,7 +24,13 @@
 			<td>4</td>
 			<td>5</td>
 		</tr>
-
+		
+		<script>
+			function insertionSort(){
+				console.log(document.getElementsByTagName('tr').innerHTML());
+			}
+		</script>
+		
 	</table>
 
 </html>
