--- a/SortingAlgorithms/index.html
+++ b/SortingAlgorithms/index.html
@@ -10,11 +10,11 @@
 
 	<table border="1">
 		<tr>
-			<td>1</td>
-			<td>2</td>
-			<td>3</td>
-			<td>4</td>
-			<td>5</td>
+			<td>1 Hi</td>
+			<td>2 LaDean</td>
+			<td>3 How</td>
+			<td>4 are</td>
+			<td>5 you?</td>
 
 		</tr>
 		<tr>
